samples/_failures_safe/1761412800_2af4d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c267af8.c: In function ‘main’:
./samples/SAFE/__tmp_8c267af8.c:159:5: error: expected expression at end of input
  159 |     for (int i = 0;
      |     ^~~
./samples/SAFE/__tmp_8c267af8.c:159:5: error: expected declaration or statement at end of input
